alert test github pages

--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <h1>My Web Page</h1>
+    <button id="myButton">button</button>
 </body>
 </html>
+
+<script>
+var button = document.getElementById("myButton");
+button.addEventListener("click", function(e) {
+    alert("callind")
+})
+
+</script>
