--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="levys/favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="levys/logo192.png" />
+    <link rel="manifest" href="levys/manifest.json" />
     <title>React App</title>
-    <script defer="defer" src="/static/js/main.74e62181.js"></script>
-    <link href="/static/css/main.073c9b0a.css" rel="stylesheet">
+    <script defer="defer" src="levys/static/js/main.74e62181.js"></script>
+    <link href="levys/static/css/main.073c9b0a.css" rel="stylesheet">
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
